--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -1,2 +1,11 @@
 [Controls]
+uTopActionKey = 45
+uRightActionKey = 46
+uBottomActionKey = 47
 uLeftActionKey = 48
+
+[TopPage]
+uTopType = 1
+uTopSelectedItem = 0
+sRefreshTopItems =
+sSelectedTopItemForm =
