--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -8,4 +8,12 @@ uLeftActionKey = 48
 uTopType = 1
 uTopSelectedItem = 0
 sRefreshTopItems =
-sSelectedTopItemForm =
+sSelectedTopItemForm = 0
+
+[HudSetting]
+fHudImageScaleWidth = 1.0
+fHudImageScaleHeight = 1.0
+sDisplayResolutionWidth =
+fHudImagePositionWidth = 0.0
+sDisplayResolutionHeight = 
+fHudImagePositionHeight = 0.0
