--- a/mcm/Config/LamasTinyHUD/config.json
+++ b/mcm/Config/LamasTinyHUD/config.json
@@ -3,12 +3,10 @@
     "displayName": "Lamas Tiny HUD",
     "minMcmVersion": 11,
     "cursorFillMode": "topToBottom",
-    "pages": [
-        {
+    "pages": [{
             "pageDisplayName": "$LamasTinyHUD_ControlsPage",
             "cursorFillMode": "topToBottom",
-            "content": [
-                {
+            "content": [{
                     "text": "$LamasTinyHUD_Controls_HeaderText",
                     "type": "header"
                 },
@@ -57,8 +55,7 @@
         {
             "pageDisplayName": "$LamasTinyHUD_TopPage",
             "cursorFillMode": "topToBottom",
-            "content": [
-                {
+            "content": [{
                     "text": "$LamasTinyHUD_Top_HeaderText",
                     "type": "header"
                 },
@@ -114,30 +111,105 @@
         {
             "pageDisplayName": "$LamasTinyHUD_RightPage",
             "cursorFillMode": "topToBottom",
-            "content": [
-                {
-                    "text": "$LamasTinyHUD_Right_HeaderText",
-                    "type": "header"
-                }
-            ]
+            "content": [{
+                "text": "$LamasTinyHUD_Right_HeaderText",
+                "type": "header"
+            }]
         },
         {
             "pageDisplayName": "$LamasTinyHUD_BottomPage",
             "cursorFillMode": "topToBottom",
-            "content": [
-                {
-                    "text": "$LamasTinyHUD_Bottom_HeaderText",
-                    "type": "header"
-                }
-            ]
+            "content": [{
+                "text": "$LamasTinyHUD_Bottom_HeaderText",
+                "type": "header"
+            }]
         },
         {
             "pageDisplayName": "$LamasTinyHUD_LeftPage",
             "cursorFillMode": "topToBottom",
-            "content": [
-                {
-                    "text": "$LamasTinyHUD_Left_HeaderText",
+            "content": [{
+                "text": "$LamasTinyHUD_Left_HeaderText",
+                "type": "header"
+            }]
+        },
+        {
+            "pageDisplayName": "$LamasTinyHUD_HudSetting",
+            "cursorFillMode": "topToBottom",
+            "content": [{
+                    "text": "$LamasTinyHUD_HudSetting_HeaderText",
                     "type": "header"
+                },
+                {
+                    "id": "fHudImageScaleWidth:HudSetting",
+                    "text": "$LamasTinyHUD_HudSetting_HudImageScaleWidth_OptionText",
+                    "type": "slider",
+                    "help": "$LamasTinyHUD_HudSetting_HudImageScaleWidth_InfoText",
+                    "valueOptions": {
+                        "min": 0.1,
+                        "max": 5.0,
+                        "step": 0.05,
+                        "formatString": "{2}",
+                        "sourceType": "ModSettingFloat"
+                    }
+                },
+                {
+                    "id": "fHudImageScaleHeight:HudSetting",
+                    "text": "$LamasTinyHUD_HudSetting_HudImageScaleHeight_OptionText",
+                    "type": "slider",
+                    "help": "$LamasTinyHUD_HudSetting_HudImageScaleHeight_InfoText",
+                    "valueOptions": {
+                        "min": 0.1,
+                        "max": 5.0,
+                        "step": 0.05,
+                        "formatString": "{2}",
+                        "sourceType": "ModSettingFloat"
+                    }
+                },
+                {
+                    "id": "sDisplayResolutionWidth:HudSetting",
+                    "valueOptions": {
+                        "value": "",
+                        "sourceType": "ModSettingString"
+                    },
+                    "type": "text",
+                    "text": "$LamasTinyHUD_DisplayResolutionWidth",
+                    "help": "$LamasTinyHUD_DisplayResolutionWidth_Help"
+                },
+                {
+                    "id": "fHudImagePositionWidth:HudSetting",
+                    "text": "$LamasTinyHUD_HudSetting_ImagePositionWidth_OptionText",
+                    "type": "slider",
+                    "help": "$LamasTinyHUD_HudSetting_ImagePositionWidth_InfoText",
+                    "valueOptions": {
+                        "min": 0.0,
+                        "max": 4000.0,
+                        "step": 1.0,
+                        "formatString": "{1}",
+                        "sourceType": "ModSettingFloat"
+                    }
+                },
+                {
+                    "id": "sDisplayResolutionHeight:HudSetting",
+                    "valueOptions": {
+                        "value": "",
+                        "sourceType": "ModSettingString"
+                    },
+                    "type": "text",
+                    "text": "$LamasTinyHUD_DisplayResolutionHeight",
+                    "help": "$LamasTinyHUD_DisplayResolutionHeight_Help"
+                },
+                {
+                    "id": "fHudImagePositionHeight:HudSetting",
+                    "text": "$LamasTinyHUD_HudSetting_ImagePositionHeight_OptionText",
+                    "type": "slider",
+                    "help": "$LamasTinyHUD_HudSetting_ImagePositionHeight_InfoText",
+                    "valueOptions": {
+                        "min": 0.0,
+                        "max": 4000.0,
+                        "step": 1.0,
+                        "formatString": "{1}",
+                        "sourceType": "ModSettingFloat"
+                    }
                 }
             ]
         }
