--- a/LamasTinyHUD.ini
+++ b/LamasTinyHUD.ini
@@ -2,3 +2,7 @@
 
 ;0 trace; 1 debug; 2 info
 iLogLevel = 2
+
+[Image]
+;will be applied to slots and keys (so they they are a bit under the main image)
+fExtraSizeForImage = 1.0
