--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -17,3 +17,5 @@ sDisplayResolutionWidth =
 fHudImagePositionWidth = 0.0
 sDisplayResolutionHeight = 
 fHudImagePositionHeight = 0.0
+fHudSlotPositionOffset = 0.0
+fHudKeyPositionOffset = 0.0
