--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -9,6 +9,7 @@ uTopType = 1
 uTopSelectedItem = 0
 sRefreshTopItems =
 sSelectedTopItemForm = 0
+uTopSlotAction = 0
 
 [HudSetting]
 fHudImageScaleWidth = 1.0
