--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -10,6 +10,7 @@ uTopSelectedItem = 0
 sRefreshTopItems =
 sSelectedTopItemForm = 0
 uTopSlotAction = 0
+uTopHandSelection = 0
 
 [HudSetting]
 fHudImageScaleWidth = 1.0
