--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -5,12 +5,17 @@ uBottomActionKey = 47
 uLeftActionKey = 48
 
 [TopPage]
-uTopType = 1
+uTopType = 0
 uTopSelectedItem = 0
 sRefreshTopItems =
 sSelectedTopItemForm = 0
 uTopSlotAction = 0
 uTopHandSelection = 0
+uTopTypeLeft = 0
+sRefreshTopItemsLeft =
+sSelectedTopItemFormLeft = 0
+uTopSelectedItemLeft = 0
+uTopSlotActionLeft = 0
 
 [HudSetting]
 fHudImageScaleWidth = 1.0
