--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -10,7 +10,7 @@ uTopSelectedItem = 0
 sRefreshTopItems =
 sSelectedTopItemForm = 0
 uTopSlotAction = 0
-uTopHandSelection = 0
+uTopHandSelection = 1
 uTopTypeLeft = 0
 sRefreshTopItemsLeft =
 sSelectedTopItemFormLeft = 0
@@ -26,3 +26,7 @@ sDisplayResolutionHeight =
 fHudImagePositionHeight = 0.0
 fHudSlotPositionOffset = 0.0
 fHudKeyPositionOffset = 0.0
+fIconScaleWidth = 0.5
+fIconScaleHeight = 0.5
+uIconOpacity = 255
+uSlotButtonFeedback = 200
