--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -30,3 +30,5 @@ fIconScaleWidth = 0.5
 fIconScaleHeight = 0.5
 uIconOpacity = 255
 uSlotButtonFeedback = 200
+fKeyIconScaleWidth = 1.5
+fKeyIconScaleHeight = 1.5
